# jsondiffpatch

./: .gitignore  Cargo.toml  LICENSE  README.md
py/: Cargo.toml  pyproject.toml
py/src/: lib.rs
src/: clone.rs  context.rs  date_reviver.rs  diffpatcher.rs  errors.rs  lcs.rs  lib.rs  main.rs  processor.rs  types.rs
src/context/: diff.rs  mod.rs  patch.rs  reverse.rs
src/filters/: arrays.rs  dates.rs  diff_pipeline.rs  mod.rs  nested.rs  objects.rs  patch_pipeline.rs  reverse_pipeline.rs  texts.rs  trivial.rs
src/pipeline/: arrays.rs  diff_pipeline.rs  mod.rs  patch_pipeline.rs  reverse_pipeline.rs  texts.rs
