[package]
name = "jsondiffpatch"
version = "0.1.0"
edition = "2021"
description = "JSON diff & patch (object and array diff, text diff, multiple output formats)"
authors = ["Tin Lai <tin@tinyiu.com>"]
license = "MIT"
repository = "https://github.com/soraxas/jsondiffpatch"
keywords = ["json", "diff", "patch"]
categories = ["data-structures", "algorithms"]

[lib]
name = "jsondiffpatch"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.0"
diff-match-patch-rs = "0.5.0"
once_cell = "1.21.3"
serde_repr = "0.1.20"

[dev-dependencies]
serde_json = "1.0"


[workspace]
members = []
exclude = ["py"]
