[package]
name = "jsondiffpatch-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "jsondiffpatch"
crate-type = ["cdylib"]

[dependencies]
original_jsondiffpatch = { package = "jsondiffpatch",  path = "../" }
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pythonize = "0.25.0"
serde_json = "1.0"
